# trintrin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: conda-forge-ci.yml
bindings/: CMakeLists.txt
bindings/python/: CMakeLists.txt  trintrin.cpp
bindings/python/msgs/: CMakeLists.txt
bindings/python/msgs/include/trintrin/bindings/msgs/: BufferedPort.h  Common.h  HumanDynamics.h  HumanState.h  HumanWrench.h  Module.h  WearableActuators.h  WearableData.h  WearableTargets.h
bindings/python/msgs/src/: Common.cpp  HumanDynamics.cpp  HumanState.cpp  HumanWrench.cpp  Module.cpp  WearableActuators.cpp  WearableData.cpp  WearableTargets.cpp
bindings/python/msgs/tests/: test_load.py
bindings/python/tests/: CMakeLists.txt
msgs/: CMakeLists.txt  Common.thrift  HumanState.thrift  WearableActuators.thrift  WearableTargets.thrift
msgs/trintrin/msgs/: HumanDynamics.thrift  HumanWrench.thrift  WearableData.thrift
